tests/NormalTests/paczka1/small_fuzzy/22338969.err
Error in line 1: cnKuJI7GgK S433 43,0
Error in line 2: ndpFG9RGY S970 59,9
Error in line 11: A83 S530 90,0
